--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="action-buttons disabled" id="action-buttons">
                 <button id="btn-download" class="btn-secondary">
                     <span class="material-symbols-rounded">download</span>
-                    İndir (.webm)
+                    İndir (.mp4 / .webm)
                 </button>
                 <button id="btn-preview-play" class="btn-text">
                     <span class="material-symbols-rounded">play_circle</span>
