--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
                 </button>
             </form>
 
+            <!-- Social Media Caption Box -->
+            <div class="caption-box hidden" id="caption-box">
+                <label>Sosyal Medya Açıklaması</label>
+                <textarea id="caption-text" readonly></textarea>
+                <button id="btn-copy-caption" class="btn-secondary btn-small">
+                    <span class="material-symbols-rounded">content_copy</span>
+                    Kopyala
+                </button>
+            </div>
+
             <div class="status-box hidden" id="status-box">
                 <span class="loader"></span>
                 <span id="status-text">İşleniyor...</span>
