--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@
                         <option
                             value="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/ccCommunity/Kai_Engel/Satin/Kai_Engel_-_04_-_Sentinel.mp3">
                             Dramatik / Tarihi (Sentinel)</option>
+                        <option Epik / Gerilim (Impact)</option>
                         <option
-                            value="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Kevin_MacLeod/Impact/Kevin_MacLeod_-_03_-_Impact_Prelude.mp3">
-                            Epik / Gerilim (Impact)</option>
+                            value="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Scott_Holmes/Inspiring__Upbeat_Music/Scott_Holmes_-_04_-_Upbeat_Party.mp3">
+                            Hareketli / Pozitif (Upbeat)</option>
+                        <option
+                            value="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/ccCommunity/Borrtex/Creation/Borrtex_-_11_-_Memoir_of_Solitude.mp3">
+                            Duygusal / Hüzünlü (Piano)</option>
+                        <option
+                            value="https://files.freemusicarchive.org/storage-freemusicarchive-org/music/ccCommunity/Niki_J_Crawford/The_Genesis_Block/Niki_J_Crawford_-_06_-_Orbiting_The_Genesis_Block.mp3">
+                            Bilim Kurgu / Uzay (Synth)</option>
                         <option value="custom">Kendi Müziğini Yükle...</option>
                     </select>
                     <input type="file" id="local-music" accept="audio/*" class="hidden" style="margin-top: 5px;">
