--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 
             <!-- Social Media Caption Box -->
             <div class="caption-box hidden" id="caption-box">
+                <!-- Music Suggestion Highlight -->
+                <div class="music-highlight" id="music-suggestion-display">
+                    <span class="material-symbols-rounded">music_note</span>
+                    <span id="music-suggestion-text">Öneri hazırlanıyor...</span>
+                </div>
+
                 <label>Sosyal Medya Açıklaması</label>
                 <textarea id="caption-text" readonly></textarea>
                 <button id="btn-copy-caption" class="btn-secondary btn-small">
