--- a/index.html
+++ b/index.html
@@ -177,6 +177,73 @@
     .leg .t{ color:var(--text); font-weight:700; margin-bottom:4px; }
   
     /* --- Mobile compact UI (single-panel view + collapsible map) --- */
+
+    /* File input: keep it in DOM for iOS/Safari */
+    .fileInput{
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0,0,0,0);
+      white-space: nowrap;
+      border: 0;
+      opacity: 0;
+    }
+
+    /* Modal */
+    .modalOverlay{
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.55);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+      z-index: 9999;
+    }
+    .modalOverlay.show{ display:flex; }
+    .modal{
+      width: min(920px, 100%);
+      max-height: 86vh;
+      overflow: auto;
+      border-radius: 16px;
+      border: 1px solid var(--border);
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.22));
+      box-shadow: var(--shadow);
+    }
+    .modalHeader{
+      padding: 14px 14px 10px 14px;
+      border-bottom: 1px solid var(--border);
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap: 10px;
+    }
+    .modalTitle{ font-size: 14px; font-weight: 800; letter-spacing:.2px; }
+    .modalSub{ margin-top: 4px; font-size: 12px; color: var(--muted); line-height:1.4; }
+    .modalBody{ padding: 12px 14px 14px 14px; display:grid; gap: 10px; }
+    .row{ display:flex; gap:10px; flex-wrap:wrap; }
+    .textArea{
+      width: 100%;
+      min-height: 220px;
+      resize: vertical;
+      padding: 10px 12px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(0,0,0,.18);
+      color: var(--text);
+      outline: none;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 12px;
+      line-height: 1.45;
+    }
+    @media (max-width: 980px){
+      .modal{ border-radius: 14px; max-height: 90vh; }
+      .textArea{ min-height: 180px; }
+    }
+
     .mobileSwitcher{
       display:none;
       margin-top:12px;
@@ -280,11 +347,13 @@
         <div class="controls">
           <select id="citySelect" style="flex:0 0 260px; min-width:220px"></select>
 
-          <input id="fileNew" type="file" accept=".kml,.kmz" multiple style="display:none" />
+          <input id="fileNew" type="file" accept=".kml,.kmz" multiple class="fileInput" />
           <button class="btn primary" id="btnNewCity">Yeni şehir (çoklu KML/KMZ)</button>
 
-          <input id="fileAppend" type="file" accept=".kml,.kmz" multiple style="display:none" />
+          <input id="fileAppend" type="file" accept=".kml,.kmz" multiple class="fileInput" />
           <button class="btn" id="btnAppendCity">Aktif şehre ekle (çoklu)</button>
+
+          <button class="btn primary" id="btnPasteKml" type="button">KML yapıştır / URL</button>
 
           <button class="btn" id="btnRenameCity">Yeniden adlandır</button>
           <button class="btn danger" id="btnDeleteCity">Şehri sil</button>
@@ -384,6 +453,20 @@
   const badgeCity = document.getElementById("badgeCity");
   const badgeSel = document.getElementById("badgeSel");
   const dropzone = document.getElementById("dropzone");
+
+  // Paste/URL modal elements
+  const btnPasteKml = document.getElementById("btnPasteKml");
+  const modalOverlay = document.getElementById("modalOverlay");
+  const btnModalClose = document.getElementById("btnModalClose");
+  const btnFetchUrl = document.getElementById("btnFetchUrl");
+  const btnImportText = document.getElementById("btnImportText");
+  const btnPasteSample = document.getElementById("btnPasteSample");
+  const kmlUrlEl = document.getElementById("kmlUrl");
+  const kmlTextEl = document.getElementById("kmlText");
+  const kmlCityNameEl = document.getElementById("kmlCityName");
+  const kmlTargetEl = document.getElementById("kmlTarget");
+  const modalStatus = document.getElementById("modalStatus");
+
 
   const btnCompute = document.getElementById("btnCompute");
   const kpiKm = document.getElementById("kpiKm");
@@ -1140,6 +1223,61 @@
   btnOpenMaps.addEventListener("click", openMaps);
   btnCompute.addEventListener("click", computeRouteStats);
 
+
+  // Paste/URL modal events
+  btnPasteKml?.addEventListener("click", () => showModal());
+  btnModalClose?.addEventListener("click", () => hideModal());
+  modalOverlay?.addEventListener("click", (e) => {
+    if(e.target === modalOverlay) hideModal();
+  });
+
+  btnPasteSample?.addEventListener("click", () => {
+    const sample = `<?xml version="1.0" encoding="UTF-8"?>
+<kml xmlns="http://www.opengis.net/kml/2.2">
+  <Document>
+    <Placemark><name>Örnek Nokta 1</name><Point><coordinates>28.9784,41.0082,0</coordinates></Point></Placemark>
+    <Placemark><name>Örnek Nokta 2</name><Point><coordinates>28.9870,41.0150,0</coordinates></Point></Placemark>
+  </Document>
+</kml>`;
+    kmlTextEl.value = sample;
+    setModalStatus("Örnek KML eklendi.");
+  });
+
+  btnFetchUrl?.addEventListener("click", async () => {
+    const url = (kmlUrlEl.value || "").trim();
+    if(!url){ setModalStatus("Lütfen bir URL girin."); return; }
+    setModalStatus("URL’den getiriliyor...");
+    btnFetchUrl.disabled = true;
+    try{
+      const text = await fetchTextFromUrl(url);
+      kmlTextEl.value = text;
+      setModalStatus("URL’den alındı. Şimdi “İçe aktar” diyebilirsiniz.");
+    }catch(err){
+      setModalStatus("URL alınamadı. Not: Bazı siteler CORS nedeniyle engeller. Raw GitHub/Drive direct link deneyin.");
+    }finally{
+      btnFetchUrl.disabled = false;
+    }
+  });
+
+  btnImportText?.addEventListener("click", async () => {
+    const target = kmlTargetEl?.value || "new";
+    const name = (kmlCityNameEl?.value || "").trim();
+    setModalStatus("İçe aktarılıyor...");
+    btnImportText.disabled = true;
+    try{
+      const res = await importFromKmlText(kmlTextEl.value, name, target);
+      hideModal();
+      search.value = "";
+      renderAll();
+      setStatus(res.mode === "append" ? `Aktif şehre eklendi (${res.count}).` : `Yeni şehir eklendi: ${res.name} (${res.count}).`);
+    }catch(err){
+      setModalStatus(err?.message || String(err));
+    }finally{
+      btnImportText.disabled = false;
+    }
+  });
+
+
   dropzone.addEventListener("dragover", (e) => { e.preventDefault(); dropzone.style.borderColor = "rgba(124,241,214,.55)"; });
   dropzone.addEventListener("dragleave", () => { dropzone.style.borderColor = "rgba(255,255,255,.22)"; });
   dropzone.addEventListener("drop", async (e) => {
@@ -1225,5 +1363,41 @@
   setStatus("Hazır.");
 })();
 </script>
+
+  <!-- Paste/URL Import Modal -->
+  <div class="modalOverlay" id="modalOverlay" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <div class="modalHeader">
+        <div>
+          <div class="modalTitle" id="modalTitle">KML İçe Aktar (Dosya kaydetmeden)</div>
+          <div class="modalSub">KML içeriğini yapıştırın veya KML/KMZ bağlantısı girin. İçe aktarma için internet gerekebilir.</div>
+        </div>
+        <button class="iconBtn" id="btnModalClose" type="button" title="Kapat">✕</button>
+      </div>
+
+      <div class="modalBody">
+        <div class="row">
+          <input class="input" id="kmlUrl" placeholder="KML/KMZ URL (opsiyonel) örn: raw github linki" />
+          <button class="btn" id="btnFetchUrl" type="button">URL’den getir</button>
+        </div>
+        <textarea id="kmlText" class="textArea" placeholder="KML içeriğini buraya yapıştırın (<?xml ...> ile başlayan)"></textarea>
+        <div class="row">
+          <input class="input" id="kmlCityName" placeholder="Şehir adı (boşsa otomatik)" />
+          <select id="kmlTarget" class="input" style="flex:0 0 220px; min-width:200px">
+            <option value="new">Yeni şehir olarak ekle</option>
+            <option value="append">Aktif şehre ekle</option>
+          </select>
+        </div>
+        <div class="row" style="justify-content:space-between; align-items:center">
+          <div class="muted" id="modalStatus">Hazır.</div>
+          <div style="display:flex; gap:8px; flex-wrap:wrap; justify-content:flex-end">
+            <button class="btn" id="btnPasteSample" type="button">Örnek KML</button>
+            <button class="btn primary" id="btnImportText" type="button">İçe aktar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
