--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Gezi Planlayıcı (Mobil / Offline Lite)</title>
+
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#0b1220">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <style>
     :root{
       --bg:#0b1220; --muted:#9fb0d0; --text:#eef2ff;
@@ -1302,5 +1309,16 @@
   renderAll();
 })();
 </script>
+
+<script>
+  (function(){
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function(){
+        navigator.serviceWorker.register("./sw.js").catch(function(){ /* ignore */ });
+      });
+    }
+  })();
+</script>
+
 </body>
 </html>
