--- a/index.html
+++ b/index.html
@@ -292,10 +292,10 @@
       <div class="controls">
         <select id="citySelect"></select>
 
-        <input id="fileNew" class="fileInput" type="file" accept=".kml" multiple />
+        <input id="fileNew" class="fileInput" type="file" accept="*/*" multiple />
         <label class="btn primary" id="btnNewCity" for="fileNew">Yeni şehir (çoklu KML)</label>
 
-        <input id="fileAppend" class="fileInput" type="file" accept=".kml" multiple />
+        <input id="fileAppend" class="fileInput" type="file" accept="*/*" multiple />
         <label class="btn" id="btnAppendCity" for="fileAppend" aria-disabled="true">Aktif şehre ekle</label>
 
         <button class="btn" id="btnRenameCity" type="button">Yeniden adlandır</button>
